# toys-python

./: .gitignore  README.md  pyproject.toml
broswer/: url.py
browser/: url.py
network/: toy_socket.py  toy_socket_client.py
tests/: test_toy_socket.py  test_url.py
